# defectdojo-install

./: .dockerignore  .gitignore  Dockerfile  README.md  dc.sh  ddadmin.sh  pyproject.toml  tests.sh
bash_completion/: ddadmin
libs/: defectdojo.sh  messages.sh
tests/: test_message.py
