[tool.poetry]
name = "defect-dojo-install"
version = "0.1.0"
description = "A simple bash script to facilitate installing the django-DefectDojo application"
authors = ["Christopher LOUËT"]
license = "MIT"
readme = "README.md"
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
pytest = "^7.4.1"
pytest-shell = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
